# dyncloud

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.dist.yaml  compose.yaml.dist  config.dist.toml  config.toml.dist  dist-workspace.toml  rust-toolchain.toml  rustfmt.toml
.github/: renovate.json5
.github/workflows/: build-dockerfile.yaml  checks.yaml  publish-docker-image.yaml  release.yml  rust.yml
src/: clap_utils.rs  clock.rs  cloudflare_api.rs  error.rs  io_helper.rs  logger.rs  main.rs  runner.rs  util.rs
src/commands/: cloudflare.rs  mod.rs
src/config/: config.rs  domain.rs  record_type.rs
src/configuration/: config.rs  domain.rs  mod.rs  record_type.rs
src/configuration/user/: config.rs  error.rs  mod.rs  providers.rs  records.rs  resolver.rs
src/configuration/v2/: config.rs  error.rs  mod.rs  records.rs
src/configuration/validation/: cron.rs  mod.rs  records_group.rs
src/dns/: mod.rs  record.rs  updater.rs  util.rs
src/ip/: cache.rs  ip_changed.rs  ip_getter.rs  mod.rs
src/ip/resolver/: ipify.rs  mod.rs
wix/: main.wxs
