[package]
name = "dyncloud"
version = "2.0.0-alpha.1"
description = "A programm that handles updating DNS records with your current public IP address."
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
license = "AGPL-3"
repository = "https://github.com/DenuxPlays/dyncloud"
homepage = "https://github.com/DenuxPlays/dyncloud"
readme = "README.md"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "2A41DDA9-0B62-4946-BFFC-410B38137366"
path-guid = "EAD2959B-66EC-4A95-BC27-3DF7E4057C47"
license = false
eula = false

[lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[lints.clippy]
# Deny
unwrap_used = "deny"
expect_used = "deny"

[features]
# Enable mimalloc memory allocator to replace the default malloc
# This can improve performance for Alpine builds
mimalloc = ["dep:mimalloc"]

[dependencies]
# CLI
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
anstyle = "1.0.13"
comfy-table = "7.2.1"

## Progress bar
indicatif = "0.18.0"

# Scheduling
job_scheduler_ng = { git = "https://github.com/DenuxPlays/job_scheduler.git", branch = "feature/croner", default-features = false, features = ["croner"] }

# File serialization and deserialization
toml = "0.9.7"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Cloudflare API
cloudflare = { version = "0.14.0", features = ["rustls-tls", "blocking"], default-features = false }
http = "1.3.1"

# Time
chrono = { version = "0.4.42", features = ["clock"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Serde
serde = { version = "1.0.228", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12.23", features = [
    "rustls-tls",
    "charset",
    "http2",
    "system-proxy",
    "blocking",
], default-features = false }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# mimalloc
# Replaces musl malloc since it is very slow
mimalloc = { version = "0.1.48", optional = true, features = ["v3"] }

[dev-dependencies]
# Mocking APIs
mockito = "1.7.0"

# JSON
serde_json = "1.0.145"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true
