[package]
name = "dyncloud"
version = "2.0.2"
description = "A programm that handles updating DNS records with your current public IP address."
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
license = "AGPL-3"
repository = "https://github.com/DenuxPlays/dyncloud"
homepage = "https://github.com/DenuxPlays/dyncloud"
readme = "README.md"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "2A41DDA9-0B62-4946-BFFC-410B38137366"
path-guid = "EAD2959B-66EC-4A95-BC27-3DF7E4057C47"
license = false
eula = false

[lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[lints.clippy]
# Deny
unwrap_used = "deny"
expect_used = "deny"

[features]
# Enable mimalloc memory allocator to replace the default malloc
# This can improve performance for Alpine builds
mimalloc = ["dep:mimalloc"]

[dependencies]
# CLI
clap = { version = "4.5.59", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
anstyle = "1.0.13"
comfy-table = "7.2.2"

## Progress bar
indicatif = "0.18.4"

# Scheduling
job_scheduler_ng = { version = "2.4.0", default-features = false, features = ["croner"] }

# File serialization and deserialization
toml = "1.0.1"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Cloudflare API
cloudflare = { version = "0.14.0", features = ["rustls-tls", "blocking"], default-features = false }
http = "1.4.0"

# Time
chrono = { version = "0.4.43", features = ["clock"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Serde
serde = { version = "1.0.228", features = ["derive"] }

# HTTP client
reqwest = { version = "0.13.2", features = [
    "charset",
    "http2",
    "system-proxy",
    "blocking",
] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.101"

# mimalloc
# Replaces musl malloc since it is very slow
mimalloc = { version = "0.1.48", optional = true, features = ["v3"] }

[dev-dependencies]
# Mocking APIs
mockito = "1.7.2"

# JSON
serde_json = "1.0.149"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true
